# marlene

./: .env.example  README.md  main.py  pyproject.toml  server.py
backend/: __init__.py  api.py  audio_manager.py  audio_player.py  config.py  logging_config.py  procupine_config  voice_agent.py  wake_word_detector.py
backend/porcupine_config/: hey-marlene_linux.ppn  hey-marlene_mac.ppn  hey-marlene_pi.ppn
backend/voice_agent_config/: functions.py  prompts.py  settings.py  smart_home_controller.py  utils.py
docs/images/: README.md
frontend/: app.js  index.html  style.css
